# djangoDRF

./: README.md  pyproject.toml
djangodrf/: db.sqlite3
djangodrf/api/: settings.py  urls.py
djangodrf/api/category/: models.py  serializers.py  views.py
djangodrf/api/category/migrations/: 0001_initial.py
tests/: test_djangodrf.py
